k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gpa-staging
  labels:
    app.kubernetes.io/part-of: gpa-management
    environment: staging
